scripts/nohup.out
Ignoring exception in command None:
discord.ext.commands.errors.CommandNotFound: Command "fjsadklfjsadjfasdlf" is not found
Ignoring exception in command None:
discord.ext.commands.errors.CommandNotFound: Command "soure" is not found
Termino is ready to go.
-----------------------------------
Ignoring exception in command slap:
Traceback (most recent call last):
  File "/usr/local/lib/python3.7/dist-packages/discord/ext/commands/core.py", line 451, in _actual_conversion
    ret = await instance.convert(ctx, argument)
  File "/root/Termino/scripts/converters.py", line 6, in convert
    random_member = random.choice(ctx.guild.members)
AttributeError: 'NoneType' object has no attribute 'members'

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/usr/local/lib/python3.7/dist-packages/discord/ext/commands/bot.py", line 902, in invoke
    await ctx.command.invoke(ctx)
  File "/usr/local/lib/python3.7/dist-packages/discord/ext/commands/core.py", line 856, in invoke
    await self.prepare(ctx)
  File "/usr/local/lib/python3.7/dist-packages/discord/ext/commands/core.py", line 790, in prepare
    await self._parse_arguments(ctx)
  File "/usr/local/lib/python3.7/dist-packages/discord/ext/commands/core.py", line 697, in _parse_arguments
    transformed = await self.transform(ctx, param)
  File "/usr/local/lib/python3.7/dist-packages/discord/ext/commands/core.py", line 552, in transform
    return await self.do_conversion(ctx, converter, argument, param)
  File "/usr/local/lib/python3.7/dist-packages/discord/ext/commands/core.py", line 505, in do_conversion
    return await self._actual_conversion(ctx, converter, argument, param)
  File "/usr/local/lib/python3.7/dist-packages/discord/ext/commands/core.py", line 464, in _actual_conversion
    raise ConversionError(converter, exc) from exc
discord.ext.commands.errors.ConversionError: (<class 'converters.SlapSomeone'>, AttributeError("'NoneType' object has no attribute 'members'"))
Termino is ready to go.
-----------------------------------
Termino is ready to go.
-----------------------------------
Termino is ready to go.
-----------------------------------
Ignoring exception in command None:
discord.ext.commands.errors.CommandNotFound: Command "8ball" is not found
Ignoring exception in command None:
discord.ext.commands.errors.CommandNotFound: Command "8ball" is not found
Termino is ready to go.
-----------------------------------
  File "bot.py", line 13
    print('-----------------------------------'))
                                                ^
SyntaxError: invalid syntax
Termino is ready to go.
-----------------------------------
Termino is ready to go.
-----------------------------------
Termino is ready to go.
-----------------------------------
Ignoring exception in command None:
discord.ext.commands.errors.CommandNotFound: Command "sourxe" is not found
Ignoring exception in command None:
discord.ext.commands.errors.CommandNotFound: Command "say" is not found
Ignoring exception in command None:
discord.ext.commands.errors.CommandNotFound: Command "hepl" is not found
Termino is ready to go.
-----------------------------------
Termino is ready to go.
-----------------------------------
